--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <div class="w-full self-center px-4 lg:w-1/2">
             <h1 class="text-base font-semibold text-primary md:text-xl">HI THERE! 👋 I'm <span class="mt-1 block text-4xl font-bold text-dark dark:text-white lg:text-5xl">Sulfa Nurohid</span></h1>
             <h2 class="mb-5 text-lg font-medium text-secondary lg:text-2xl"> a Mobile Developer</h2>
-            <p class="mb-10 font-medium leading-relaxed text-secondary">I am a software engineer, and I focus on Kotlin and Flutter, a widely-used framework for developing iOS and Android mobile applications.</p>
+            <p class="mb-10 font-medium leading-relaxed text-secondary">I am a software engineer, and I focus on Kotlin and Flutter, a widely-used framework for developing iOS, Dekstop and Android mobile applications.</p>
 
             <a href="https://api.whatsapp.com/send?phone=6281325481170&text=Hallo%20saya%20ingin%20berbicara%20dengan%20Anda" class="rounded-full bg-primary py-3 px-8 text-base font-semibold text-white transition duration-300 ease-in-out hover:opacity-80 hover:shadow-lg">Contact Me</a>
 
@@ -110,7 +110,7 @@
           <div class="mb-10 w-full px-4 lg:w-1/2">
             <h4 class="mb-3 text-lg font-bold uppercase text-primary">About</h4>
             <h2 class="mb-5 max-w-md text-3xl font-bold text-dark dark:text-white lg:text-4xl">Summary</h2>
-            <p class="max-w-xl text-base font-medium text-secondary lg:text-lg">I am a final semester student at Jenderal Achmad Yani University Yogyakarta, Informatics study program. I am also an alumnus of the Cohort BANGKIT Program 2023. I am someone who is very interested in the world of technology. I have learned various programming languages ​​such as JavaScript, Kotlin, Flutter, and Python. In every project I work on, I try to be active and provide many solutions to the problems discussed. I also have the ability to work with a team and manage projects effectively.</p>
+            <p class="max-w-xl text-base font-medium text-secondary lg:text-lg">I am a final semester student at Jenderal Achmad Yani University Yogyakarta, Informatics study program. I am also an alumnus of the BANGKIT Program 2023. I am someone who is very interested in the world of technology. I have learned various programming languages ​​such as JavaScript, Kotlin, Flutter, and Python. In every project I work on, I try to be active and provide many solutions to the problems discussed. I also have the ability to work with a team and manage projects effectively.</p>
           </div>
           <div class="w-full px-4 lg:w-1/2">
             <h3 class="mb-4 text-2xl font-semibold text-dark dark:text-white lg:pt-10 lg:text-3xl">Social Media</h3>
